# excel-difference

./: .gitignore  README.md  Taskfile.yml  output.xlsx  pyinstaller.py  pyproject.toml  test_state_persistence.py
excel_difference/: __init__.py  cli.py  excel_diff.py  gui.py  test_auto_detect.py  test_excel_diff.py  test_real_data.py
