[project]
name = "excel-difference"
version = "0.1.0"
description = "Easy difference for same shape excel files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
]

[project.scripts]
excel-diff = "excel_difference.cli:main"
excel-diff-gui = "excel_difference.gui:main"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=8.4.1",
    "pyinstaller>=6.0.0",
]
